@@ -31,7 +31,8 @@
         <launcher.args>--demo</launcher.args>
 
         <!-- Raspberry Remote Deployment -->
-        <pi.ipnumber>pi4j.local</pi.ipnumber>
+        <pi.hostname>pi4j</pi.hostname>
+        <pi.ipnumber>${pi.hostname}.local</pi.ipnumber>  <!-- change to concrete ip-number if hostname is not unique in wlan -->
         <pi.port>22</pi.port>
         <pi.username>pi</pi.username>
         <pi.password>pi4j</pi.password>
@@ -40,10 +41,10 @@
 
         <!-- Project Dependencies -->
         <java.version>17</java.version>
-        <pi4j.version>2.3.0-SNAPSHOT</pi4j.version>
+        <pi4j.version>2.4.0</pi4j.version>
         <picocli.version>4.7.4</picocli.version>
-        <junit.version>5.9.3</junit.version>
-        <mockito.version>5.3.1</mockito.version>
+        <junit.version>5.10.0</junit.version>
+        <mockito.version>5.4.0</mockito.version>
         <ant-jsch.version>1.10.9</ant-jsch.version>
 
         <!-- Maven Dependencies -->
@@ -88,7 +89,6 @@
             <groupId>com.pi4j</groupId>
             <artifactId>pi4j-plugin-mock</artifactId>
             <version>${pi4j.version}</version>
-            <scope>test</scope>
         </dependency>
 
         <!-- Plugin for I2C -->
@@ -138,7 +138,6 @@
                     <release>${java.version}</release>
                     <showDeprecation>true</showDeprecation>
                     <showWarnings>true</showWarnings>
-                    <verbose>false</verbose>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>info.picocli</groupId>
@@ -150,8 +149,8 @@
                         <!-- Used by PicoCLI annotation processor -->
                         <arg>-Aproject=${launcher.class}</arg>
                     </compilerArgs>
-                    <source>17</source>
-                    <target>17</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                 </configuration>
             </plugin>
 
@@ -232,7 +231,6 @@
         <!-- Run the JAR file locally -->
         <profile>
             <id>local-run</id>
-
             <build>
                 <plugins>
                     <plugin>
@@ -258,7 +256,6 @@
         <!-- Transfer and run JAR with dependencies on remote Raspberry -->
         <profile>
             <id>remote-run</id>
-
             <build>
                 <plugins>
                     <plugin>
@@ -296,7 +293,52 @@
                                         <sshexec host="${pi.ipnumber}" port="${pi.port}"
                                                  username="${pi.username}" password="${pi.password}" trust="true"
                                                  failonerror="false" usepty="true" useSystemIn="true"
-                                                 command="sudo java ${pi.jvmOptions} --module-path ${pi.deploydirectory} --module ${launcher.class} ${launcher.args}"/>
+                                                 command="sudo java -XX:+UseZGC -Xmx1G  ${pi.jvmOptions} --module-path ${pi.deploydirectory} --module ${launcher.class} ${launcher.args}"/>
+                                    </target>
+                                </configuration>
+                            </execution>
+                        </executions>
+                        <dependencies>
+                            <dependency>
+                                <groupId>org.apache.ant</groupId>
+                                <artifactId>ant-jsch</artifactId>
+                                <version>${ant-jsch.version}</version>
+                            </dependency>
+                        </dependencies>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <!-- Rerun the app on remote Raspberry without deploying any changes-->
+        <profile>
+            <id>rerun</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>transfer</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <configuration>
+                                    <target>
+                                        <!-- Stop all running Java processes -->
+                                        <sshexec host="${pi.ipnumber}" port="${pi.port}"
+                                                 username="${pi.username}" password="${pi.password}" trust="true"
+                                                 failonerror="false" usepty="true" useSystemIn="false"
+                                                 suppresssystemerr="true" suppresssystemout="true"
+                                                 command="sudo killall -9 java"/>
+
+                                        <!-- Run application on Raspberry Pi -->
+                                        <sshexec host="${pi.ipnumber}" port="${pi.port}"
+                                                 username="${pi.username}" password="${pi.password}" trust="true"
+                                                 failonerror="false" usepty="true" useSystemIn="true"
+                                                 command="sudo java -XX:+UseZGC -Xmx1G  ${pi.jvmOptions} --module-path ${pi.deploydirectory} --module ${launcher.class} ${launcher.args}"/>
                                     </target>
                                 </configuration>
                             </execution>
